added configuration file + fixed pr issues

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,6 @@ config {
     jwtSecret = "#>!IEd!G-L70@OTr$t8E[4.#[A;zo2@{"
   }
   db {
-    url = "jdbc:sqlite:realworld-prod.sqlite"
+    url = "jdbc:sqlite:realworld-prod.sqlite" // TODO use it and adjust tests using DbConfig
   }
 }
