--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Check formatting
         id: check-formatting
         run: sbt scalafmtCheckAll
-      - name: Checkout Postman collections
-        uses: actions/checkout@v3
-        with:
-          repository: gothinkster/realworld
-          path: realworld-repo
+      - name: Test
+        id: test
+        run: sbt -v test
       - name: Override with postman collections from original repo
-        run: cp ./realworld-repo/api/Conduit.postman_collection.json ./postman_collections/Conduit.postman_collection.json
+        uses: wei/wget@v1
+        with:
+          args: -q -O ./postman_collections/Conduit.postman_collection.json https://raw.githubusercontent.com/gothinkster/realworld/main/api/Conduit.postman_collection.json
       - name: Postman tests
         id: postman-tests
         run: ./run-postman-tests.sh
