--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,7 +3,7 @@ pull_request_rules:
     conditions: []
     actions:
       delete_head_branch: {}
-  - name: automatic merge for softwaremill-ci pull requests affecting build.sbt
+  - name: automatic merge for github-actions pull requests affecting build.sbt
     conditions:
       - author=github-actions
       - check-success=CI
@@ -12,7 +12,7 @@ pull_request_rules:
     actions:
       merge:
         method: merge
-  - name: automatic merge for softwaremill-ci pull requests affecting project plugins.sbt
+  - name: automatic merge for github-actions pull requests affecting project plugins.sbt
     conditions:
       - author=github-actions
       - check-success=CI
@@ -21,7 +21,7 @@ pull_request_rules:
     actions:
       merge:
         method: merge
-  - name: automatic merge for softwaremill-ci pull requests affecting project build.properties
+  - name: automatic merge for github-actions pull requests affecting project build.properties
     conditions:
       - author=github-actions
       - check-success=CI
@@ -30,7 +30,7 @@ pull_request_rules:
     actions:
       merge:
         method: merge
-  - name: automatic merge for softwaremill-ci pull requests affecting .scalafmt.conf
+  - name: automatic merge for github-actions pull requests affecting .scalafmt.conf
     conditions:
       - author=github-actions
       - check-success=CI
@@ -39,7 +39,7 @@ pull_request_rules:
     actions:
       merge:
         method: merge
-  - name: semi-automatic merge for softwaremill-ci pull requests
+  - name: semi-automatic merge for github-actions pull requests
     conditions:
       - author=github-actions
       - check-success=CI
