--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -26,5 +26,6 @@ jobs:
         with:
           author-name: scala-steward
           author-email: scala-steward
+          github-token: ${{ secrets.REPO_GITHUB_TOKEN }}
           repo-config: .scala-steward.conf
           ignore-opts-files: false
