--- a/.mergify.yml
+++ b/.mergify.yml
@@ -42,7 +42,7 @@ pull_request_rules:
   - name: semi-automatic merge for softwaremill-ci pull requests
     conditions:
       - author=softwaremill-ci
-      - check-success=CI
+      - check-success=ci
       - "#approved-reviews-by>=1"
     actions:
       merge:
