--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,7 +6,7 @@ pull_request_rules:
   - name: automatic merge for softwaremill-ci pull requests affecting build.sbt
     conditions:
       - author=softwaremill-ci
-      - check-success=CI
+      - check-success=CI / test (pull_request)
       - "#files=1"
       - files=build.sbt
     actions:
@@ -15,7 +15,7 @@ pull_request_rules:
   - name: automatic merge for softwaremill-ci pull requests affecting project plugins.sbt
     conditions:
       - author=softwaremill-ci
-      - check-success=CI
+      - check-success=CI / test (pull_request)
       - "#files=1"
       - files=project/plugins.sbt
     actions:
@@ -24,7 +24,7 @@ pull_request_rules:
   - name: automatic merge for softwaremill-ci pull requests affecting project build.properties
     conditions:
       - author=softwaremill-ci
-      - check-success=CI
+      - check-success=CI / test (pull_request)
       - "#files=1"
       - files=project/build.properties
     actions:
@@ -33,7 +33,7 @@ pull_request_rules:
   - name: automatic merge for softwaremill-ci pull requests affecting .scalafmt.conf
     conditions:
       - author=softwaremill-ci
-      - check-success=CI
+      - check-success=CI / test (pull_request)
       - "#files=1"
       - files=.scalafmt.conf
     actions:
@@ -42,7 +42,7 @@ pull_request_rules:
   - name: semi-automatic merge for softwaremill-ci pull requests
     conditions:
       - author=softwaremill-ci
-      - check-success=CI
+      - check-success=CI / test (pull_request)
       - "#approved-reviews-by>=1"
     actions:
       merge:
