--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -1,31 +1,19 @@
 name: Scala Steward
 
+# This workflow will launch at 00:00 every day
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   workflow_dispatch:
+
+permissions:
+  contents: write        # Required to checkout and push changes
+  pull-requests: write   # Required to create PRs for dependency updates
 
 jobs:
   scala-steward:
-    name: Scala Steward
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: temurin
-          cache: sbt
-
-      - name: Launch Scala Steward
-        uses: scala-steward-org/scala-steward-action@v2
-        with:
-          author-name: scala-steward
-          author-email: scala-steward
-          github-token: ${{ secrets.REPO_GITHUB_TOKEN }}
-          repo-config: .scala-steward.conf
-          ignore-opts-files: false
+    uses: softwaremill/github-actions-workflows/.github/workflows/scala-steward.yml@main
+    secrets:
+      github-token: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      java-version: '21'
